--- a/playground/router.html
+++ b/playground/router.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        <div>
-            <router-link to="/login">Login</router-link>
-            <router-link to="/main">Main</router-link>
-        </div>
-        <router-view></router-view>
+      <div>
+        <h1>뷰 라우터 예제</h1>
+        <router-link to="/login">Login 컴포넌트로 이동</router-link>
+        <router-link to="/main">Main 컴포넌트로 이동</router-link>
+      </div>
+      <router-view></router-view>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script>
-        var LoginComponent = {
-            template: '<div>login</div>'
-        }
-        var MainComponent = {
-             template: '<div>main</div>'
-        }
+      var loginComponent = {
+        template: '<div>login</div>',
+      };
+      var mainComponent = {
+        template: '<div>main</div>',
+      };
 
-        // 라우터 인스턴스 생성
-        var router = new VueRouter({
-            // 페이지의 라우팅 정보
-            mode: 'history',
-            routes: [
-                //로그인 페이지 정보
-                {
-                    // 페이지의 url 이름
-                    path: '/login',
-                    //name: 'login',
-                    // 해당 url에서 표시될 컴포넌트
-                    component: LoginComponent
-                },
-                //메인 페이지 정보
-                {
-                    //url은 main, 컴포넌트 이름은 MainComponent
-                    path: '/main',
-                    component: MainComponent
-                }
-            ]
-        });
+      // 라우터 인스턴스 생성
+      var router = new VueRouter({
+        // 페이지의 라우팅 정보
+        mode: 'history', // URL의 해쉬 값(#) 제거 속성
+        routes: [
+          // 라우팅 할 URL과 컴포넌트 값 지정
+          // 로그인 페이지 정보
+          {
+            // 페이지의 url 이름
+            path: '/login',
+            //name: 'login',
+            // 해당 url에서 표시될 컴포넌트
+            component: loginComponent,
+          },
+          //메인 페이지 정보
+          {
+            //url은 main, 컴포넌트 이름은 MainComponent
+            path: '/main',
+            component: mainComponent,
+          },
+        ],
+      });
 
-        // 인스턴스에 라우터 인스턴스를 등록
-        new Vue({
-            el: '#app',
-            router: router
-        });
+      // 인스턴스에 라우터 인스턴스를 등록
+      new Vue({
+        el: '#app',
+        router: router,
+      });
+      // new Vue({
+      //   router,
+      // }).$mount('#app');
     </script>
-</body>
+  </body>
 </html>
