--- a/playground/methods.html
+++ b/playground/methods.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        <button v-on:click="logText">click me</button><br>
-        <input type="text" v-on:keyup.enter="logText"><br>
-        <button>add</button>
+      <button v-on:click="logText">click me</button><br />
+      <input type="text" v-on:keyup.enter="logText" /><br />
+      <button>add</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-        new Vue({
-            el: '#app',
-            methods: {
-                logText: function() {
-                    console.log('clicked');
-                }
-            }
-        })
+      new Vue({
+        el: '#app',
+        methods: {
+          logText: function () {
+            console.log('clicked');
+            alert('clicked');
+          },
+        },
+      });
     </script>
-</body>
+  </body>
 </html>
