--- a/playground/watch.html
+++ b/playground/watch.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        {{ num }}
-        <button v-on:click="addNum">increase</button>
+      {{ num }}
+      <button v-on:click="addNum">increase</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-        new Vue({
-            el: '#app',
-            data: {
-                num: 10
-            },
-            watch: {
-                num: function() {
-                    this.logText();     
-                }
-
-            },
-            methods: {
-                addNum: function() {
-                    this.num = this.num + 1;
-                },
-                logText: function() {
-                    console.log('changed');
-                }
-            }
-        })
+      new Vue({
+        el: '#app',
+        data: {
+          num: 10,
+        },
+        watch: {
+          // watch 속성 : 데이터 변화를 감지하여 자동으로 특정 로직을 수행
+          num: function () {
+            this.logText();
+          },
+        },
+        methods: {
+          addNum: function () {
+            this.num = this.num + 1;
+          },
+          logText: function () {
+            console.log('changed');
+          },
+        },
+      });
     </script>
-</body>
+  </body>
 </html>
